<resources>
    <string name="app_name">TV助手</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="input_text_here">在此输入</string>
    <string name="type">输入</string>
    <string name="enter">回车</string>
    <string name="start_browser">启动浏览器</string>
    <string name="stop_browser">关闭浏览器</string>
    <string name="other_command">其它</string>
    <string name="exit_full_screen">退出全屏</string>
    <string name="mouse_left_button">左键</string>
    <string name="mouse_right_button">右键</string>
    <string name="volume_lower">音量 -</string>
    <string name="volume_raise">音量 +</string>
    <string name="server_echo">服务端回显(若无反应表示未连接到服务器)：\n</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="sound_output">声音输出</string>

    <string name="pref_header_server">服务器</string>
    <string name="pref_header_hardware">硬件</string>
    <string name="pref_header_mouse">鼠标</string>

    <string name="pref_title_server_hostname">服务器地址 (主机名或IP)</string>
    <string name="pref_title_server_port">端口</string>
    <string name="pref_title_hardware_sound_card_index">声卡序号 (通过 pacmd list-cards 命令获取)</string>
    <string name="pref_title_hardware_output_device_name">声音输出设备序号 (通过 pacmd list-cards 命令获取)</string>
    <string name="pref_title_mouse_scroll_threshold_pixel">滚动像素阈值 (越大滚动越不灵敏)</string>
    <string name="pref_title_mouse_move_threshold_pixel">鼠标移动像素阈值 (小于该值的移动被忽略)</string>
    <string name="pref_title_mouse_move_sensitivity">一般移动粘滞度 (越大移动越慢)</string>
    <string name="pref_title_mouse_fine_move_sensitivity">细微移动粘滞度 (越大移动越慢)</string>

    <string name="pref_default_server_hostname">server.home</string>
    <string name="pref_default_server_port">8888</string>
    <string name="pref_default_hardware_sound_card_index">0</string>
    <string name="pref_default_hardware_output_device_name">hdmi-stereo-extra2</string>
    <string name="pref_default_mouse_scroll_threshold_pixel">10</string>
    <string name="pref_default_mouse_move_threshold_pixel">3</string>
    <string name="pref_default_mouse_move_sensitivity">1.0</string>
    <string name="pref_default_mouse_fine_move_sensitivity">3.0</string>

    <string name="acton_settings_reset_hardware_pref">重置硬件设置</string>
    <string name="action_settings_reset_mouse_pref">重置鼠标设置</string>
</resources>
