<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_mouse_scroll_threshold_pixel"
        android:inputType="number"
        android:key="mouse_scroll_threshold_pixel"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mouse_scroll_threshold_pixel" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_mouse_move_threshold_pixel"
        android:inputType="number"
        android:key="mouse_move_threshold_pixel"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mouse_move_threshold_pixel" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_mouse_move_sensitivity"
        android:inputType="numberDecimal"
        android:key="mouse_move_sensitivity"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mouse_move_sensitivity" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_mouse_fine_move_sensitivity"
        android:inputType="numberDecimal"
        android:key="mouse_fine_move_sensitivity"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mouse_fine_move_sensitivity" />

</PreferenceScreen>
