<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_server_hostname"
        android:inputType="none"
        android:key="server_hostname"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_hostname" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_server_port"
        android:inputType="number"
        android:key="server_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_port" />

</PreferenceScreen>
