<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_hardware_sound_card_index"
        android:inputType="number"
        android:key="hardware_sound_card_index"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hardware_sound_card_index"/>

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_hardware_output_device_name"
        android:inputType="none"
        android:key="hardware_output_device_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hardware_output_device_name" />

</PreferenceScreen>
