<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <!--android:icon="@drawable/ic_info_black_24dp"-->
    <header
        android:fragment="com.zearon.tvasistant.SettingsActivity$ServerPreferenceFragment"
        android:title="@string/pref_header_server" />
    <header
        android:fragment="com.zearon.tvasistant.SettingsActivity$HardwarePreferenceFragment"
        android:title="@string/pref_header_hardware" />
    <header
        android:fragment="com.zearon.tvasistant.SettingsActivity$MousePreferenceFragment"
        android:title="@string/pref_header_mouse" />

    <!--
    <header
        android:fragment="com.zearon.tvasistant.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_server" />
    <header
        android:fragment="com.zearon.tvasistant.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.zearon.tvasistant.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />
    -->

</preference-headers>
