<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc"
    tools:context="com.zearon.tvasistant.KeyboardAndMouseActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:orientation="vertical" android:id="@+id/fullscreen_content" android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center" android:keepScreenOn="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topPanel">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/top1Panel">

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:id="@+id/configButton"
                    android:layout_gravity="left|top"
                    android:background="@drawable/config" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_browser"
                    android:id="@+id/startBrowserButton"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:onClick="onStartBrowserBtnClicked"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_browser"
                    android:id="@+id/stopBrowserButton"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:onClick="onStopBrowserBtnClicked"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_command"
                    android:id="@+id/otherCommandButton"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:onClick="onOtherCommandBtnClicked"/>
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0"
                android:id="@+id/textInputPanel">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/typeContentEditText" android:text="@string/input_text_here"
                        android:layout_gravity="top" />

                    <Button
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:id="@+id/typeTextButton"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:onClick="onTypeTextBtnClicked"/>

                    <Button
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:text="@string/enter"
                        android:id="@+id/sendEnterButton"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:onClick="onEnterPressBtnClicked"/>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,2"
                android:id="@+id/mousePanel">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/mouseLeftButton"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:onClick="onMouseLeftButtonClicked"/>

                    <Button
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/mouseMiddleButton"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:onClick="onMouseMiddleButtonClicked"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/mouseRightButton"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:onClick="onMouseRightButtonClicked"/>

                </TableRow>
            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomPanel">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/softKeyBoard"
                android:layout_gravity="bottom">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/keyboard_digits">

                    <Button
                        android:id="@+id/key_button_1"
                        android:text="1"
                        style="@style/key_button_digit" />
                    <Button
                        android:id="@+id/key_button_2"
                        android:text="2"
                        style="@style/key_button_digit" />
                    <Button
                        android:id="@+id/key_button_3"
                        android:text="3"
                        style="@style/key_button_digit" />
                    <Button
                        android:id="@+id/key_button_4"
                        android:text="4"
                        style="@style/key_button_digit" />
                    <Button
                        android:id="@+id/key_button_5"
                        android:text="5"
                        style="@style/key_button_digit" />
                    <Button
                        android:id="@+id/key_button_6"
                        android:text="6"
                        style="@style/key_button_digit" />
                    <Button
                        android:id="@+id/key_button_7"
                        android:text="7"
                        style="@style/key_button_digit" />
                    <Button
                        android:id="@+id/key_button_8"
                        android:text="8"
                        style="@style/key_button_digit" />
                    <Button
                        android:id="@+id/key_button_9"
                        android:text="9"
                        style="@style/key_button_digit" />
                    <Button
                        android:id="@+id/key_button_0"
                        android:text="0"
                        style="@style/key_button_digit" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/keyboard_line1">

                    <Button
                        android:id="@+id/key_button_q"
                        android:text="q"
                        style="@style/key_button_line1" />
                    <Button
                        android:id="@+id/key_button_w"
                        android:text="w"
                        style="@style/key_button_line1" />
                    <Button
                        android:id="@+id/key_button_e"
                        android:text="e"
                        style="@style/key_button_line1" />
                    <Button
                        android:id="@+id/key_button_r"
                        android:text="r"
                        style="@style/key_button_line1" />
                    <Button
                        android:id="@+id/key_button_t"
                        android:text="t"
                        style="@style/key_button_line1" />
                    <Button
                        android:id="@+id/key_button_y"
                        android:text="y"
                        style="@style/key_button_line1" />
                    <Button
                        android:id="@+id/key_button_u"
                        android:text="u"
                        style="@style/key_button_line1" />
                    <Button
                        android:id="@+id/key_button_i"
                        android:text="i"
                        style="@style/key_button_line1" />
                    <Button
                        android:id="@+id/key_button_o"
                        android:text="o"
                        style="@style/key_button_line1" />
                    <Button
                        android:id="@+id/key_button_p"
                        android:text="p"
                        style="@style/key_button_line1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/keyboard_line2"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <Button
                        android:id="@+id/key_button_a"
                        android:text="a"
                        style="@style/key_button_line2" />
                    <Button
                        android:id="@+id/key_button_s"
                        android:text="s"
                        style="@style/key_button_line2" />
                    <Button
                        android:id="@+id/key_button_d"
                        android:text="d"
                        style="@style/key_button_line2" />
                    <Button
                        android:id="@+id/key_button_f"
                        android:text="f"
                        style="@style/key_button_line2" />
                    <Button
                        android:id="@+id/key_button_g"
                        android:text="g"
                        style="@style/key_button_line2" />
                    <Button
                        android:id="@+id/key_button_h"
                        android:text="h"
                        style="@style/key_button_line2" />
                    <Button
                        android:id="@+id/key_button_j"
                        android:text="j"
                        style="@style/key_button_line2" />
                    <Button
                        android:id="@+id/key_button_k"
                        android:text="k"
                        style="@style/key_button_line2" />
                    <Button
                        android:id="@+id/key_button_l"
                        android:text="l"
                        style="@style/key_button_line2" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/keyboard_line3">

                    <ImageButton
                        android:id="@+id/key_button_shift"
                        android:text=""
                        style="@style/key_button_line3_margin"/>
                    <Button
                        android:id="@+id/key_button_z"
                        android:text="z"
                        style="@style/key_button_line3" />
                    <Button
                        android:id="@+id/key_button_x"
                        android:text="x"
                        style="@style/key_button_line3" />
                    <Button
                        android:id="@+id/key_button_c"
                        android:text="c"
                        style="@style/key_button_line3" />
                    <Button
                        android:id="@+id/key_button_v"
                        android:text="v"
                        style="@style/key_button_line3" />
                    <Button
                        android:id="@+id/key_button_b"
                        android:text="b"
                        style="@style/key_button_line3" />
                    <Button
                        android:id="@+id/key_button_n"
                        android:text="n"
                        style="@style/key_button_line3" />
                    <Button
                        android:id="@+id/key_button_m"
                        android:text="m"
                        style="@style/key_button_line3" />
                    <ImageButton
                        android:id="@+id/key_button_backspace"
                        android:text=""
                        style="@style/key_button_line3_margin" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/keyboard_line4"></LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/logTextView"
            android:background="@drawable/logview_border"/>

    </LinearLayout>


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_gravity="right|top"
        android:background="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />

    <!--
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

    </FrameLayout>
    -->
</FrameLayout>
